--- a/templates/register.html
+++ b/templates/register.html
@@ -59,31 +59,46 @@
             {% csrf_token %}
             <div class="input">
                 <label>用户名：</label>
-                <input type="text" name="username" required minlength="4" maxlength="20">
+                <input type="text" name="username" >
+                <div>{{ error.username }}</div>
             </div>
             <div class="input">
                 <label>密码：</label>
-                <input type="password" name="password" required minlength="8">
+                <input type="password" name="password">
+                <div>{{ errors.password }}</div>
             </div>
             <div class="input">
                 <label>确认密码：</label>
-                <input type="password" name="repassword" required minlength="8">
+                <input type="password" name="repassword" >
+                <div>{{ errors.repassword }}</div>
+            </div>
+             <div class="input">
+                <label>邮箱：</label>
+                <input type="text" name="email">
+                 <div>{{ errors.email }}</div>
             </div>
             <div class="input mobile">
                 <label>手机号：</label>
                 <input type="tel" name="tel">
                 <input type="button" id="sendBtn" value="发送验证码">
+                <div>{{ errors.tel }}</div>
             </div>
             <div class="input">
                 <label>验证码：</label>
-                <input type="text" name="mobilecode" required minlength="6" maxlength="6">
+                <input type="text" name="mobilecode" >
+                <div>{{ errors.mobilecode }}</div>
+            </div>
+            <div class="input">
+                <input type="checkbox" name="agreement">
+                <lable>接受网站条款<a href="">服务条款</a></lable>
+                <div>{{ error.agreement }}</div>
             </div>
             <div class="input">
                 <input type="submit" value="注册">
                 <input type="reset" value="重置">
             </div>
         </form>
-        <a href="login.html">返回登录</a>
+        <a href="/login/">返回登录</a>
     </div>
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 
